# Auction

./: .gitignore  CLAUDE.md  Cargo.toml  dfx.json
.github/workflows/: ci.yml
canister/: Cargo.toml  auction.did  build.rs
canister/examples/: participant.rs
canister/src/: api.rs  auth.rs  certify.rs  lib.rs  sign.rs  solana.rs  weight.rs
canister/tests/: g2.rs  g3.rs
canister/tests/common/: mod.rs
canister/tests/fixtures/: no-operator.toml
canister/tests/mock-index/src/: lib.rs
canister/tests/mock-sol-rpc/: Cargo.toml
canister/tests/mock-sol-rpc/src/: lib.rs
config/: mainnet.toml  testnet.toml
docs/: build-plan.md  game-spec.md  post-game.md  standards.md
e2e/solana-driver/src/: main.rs
logic/: Cargo.toml
logic/src/: auction.rs  finale.rs  lib.rs  verdict.rs  vote.rs
scripts/: e2e-devnet.sh  lint-boundaries.sh  test-canister.sh
